--- a/index.html
+++ b/index.html
@@ -221,12 +221,15 @@
         <!-- Slide 10-->
         <section class="bg-apple">
           <div class="wrap">
-            <img class="alignright" src="img/communityPortal.png" width="700" height="300">
             <div class="content-left">
               <h3> <b> 3. Filtering not useful pages </b></h3>
               <br>
-              <p>Inside (almost) every page there are links to Wikipedia articles related to some pages that are not an articles of the encyclopedia (help page, community portal, authors discussion, etc...).
+              <p>
+                Inside (almost) every page there are links to Wikipedia articles related to some pages that are not an articles of the encyclopedia (help page, community portal, authors discussion, etc...).
               </p>
+            </div>
+            <div class="content-right">
+              <img class="alignright" src="img/communityPortal.png">
             </div>
           </div>    
         </section>
