fixed final slide

--- a/index.html
+++ b/index.html
@@ -357,10 +357,10 @@
         <section class="bg-apple">
           <div class="wrap">
             <div class="content-center">
-              <p class="text-intro"><font size="+2">Based on these three classes, the code <a href="https://github.com/RobertoCorti/Information-Retrieval-and-Data-Visualization/blob/main/InformationRetrieval/Project/wikipediaSearch.py"> wikipediaSearch.py </a> provides the command-line interface on which the user can interact with. </font>
+              <p class="text-intro"><font size="+2">Based on these three classes, the code <a href="https://github.com/RobertoCorti/Information-Retrieval-and-Data-Visualization/blob/main/InformationRetrieval/Project/wikipediaSearch.py"> wikipediaSearch.py </a> provides the command-line interface where the user can interact. </font>
                 <br> <br>
                
-                <img src="img/demo.gif">
+                <img src="img/demo.gif" width="4000" height="4000">
               
             </div>
           </div>
