--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <section class="bg-apple">
           <div class="wrap">
             <div class="content-center">
-              <p><font size="+3">In order to get these two graphs, some <b>preprocessing steps</b> are required.</p></font>
+              <p><font size="+3">To get these two graphs, some <b>preprocessing steps</b> are required.</p></font>
             </div>
           </div>
         </section>
