changed an image

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             </div>
             <div class="content-right text-intro">
               For a given <code>topic</code> this kind of PageRank will need a topic-specific jump vector. <br> <br>
-              <img src="img/generate_seed.png">
+              <img src="img/generate_jump.png">
             </div>
           </div>
         </section>
