added text in Slide 2

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                     <div class="text-subtitle">A Wikipedia search engine</div>
                     <p class="text-intro">WikipediaSearch is a command line user-interactive tool that computes a Personalized PageRank over a Wikipedia corpus.</p>
                     <p class="text-intro">Considering a set of user rankings on five specific topics, WikipediaSearch performs a ranking of the Wikipedia articles based on the user's preferences.</p>
+                    <br>
+                    <p class="text-intro">For this application, the Wikipedia dataset taken into account for this work is the <a href="https://dumps.wikimedia.org/other/static_html_dumps/April_2007/"> simple Wikipedia dump of April 2007 </a>.</p>
                 </div>
                 
                 <div class="content-right">
