changed a name in Slide 15

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
               <br>
               <code>IRsystem</code> class will compute the final Pagerank vector using user'specified weight.
               <br> <br>
-              Two data-members: a <code>PersonalizedPageRank</code> and a <code>User</code> istance.
+              Two data-members: a <code>TopicSpecificPageRank</code> and a <code>User</code> istance.
               <br> <br>
               <code>compute_weights</code> will compute the set of weights for the set of topic specified by the user, while <code>compute_final_pagerank</code> function will calculate the final PageRank vector.
             </div>
