change IRclass image

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
               <code>compute_weights</code> will compute the set of weights for the set of topic specified by the user, while <code>compute_final_pagerank</code> function will calculate the final PageRank vector.
             </div>
             <div class="content-right">
-              <img src="img/irsystemclass.png" alt="">
+              <img src="img/irsystemclass.png" width="700" height="500">
             </div>
           </div>
         </section>
