--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           <div class="wrap">
             <h2> <b>Conclusions</b> </h2>
             <br>
-            <p class="text-intro">WikipediaSearch represents a basic implementation of topic-specific PageRank and it can be used in order to satisfy a user information need in a large website like Wikipedia.</p>
+            <p class="text-intro">WikipediaSearch represents a basic implementation of topic-specific and personalized PageRank and it can be used to satisfy a user information need in a large collection of websites like Wikipedia.</p>
           
             <div class="content-left text-intro">
               <br>
@@ -437,7 +437,7 @@
             <div class="content-right text-intro">
               <br>
           
-              <img src="img/down.png" style="vertical-align:middle" width="90" height="90"> &nbsp; Keywords in listed in a page may not reflect topics in a article.
+              <img src="img/down.png" style="vertical-align:middle" width="90" height="90"> &nbsp; Keywords may not reflect all topics in a page.
               <br>
               <br>
               <br>
