--- a/index.html
+++ b/index.html
@@ -455,11 +455,11 @@
             <br>
             <div class="text-intro">
               <ul>
-                <li> <b>Graph construction</b>: speedup the computation. </li>
+                <li> <b>Graph construction</b>: speedup the computation (parallelization). </li>
                 <br>
                 <li>  <b>Refine the content information</b>: some NLP algorithms can be used to extract the main topics of a page.  </li>
                 <br>
-                <li> <b>User information extraction</b>: instead of asking to the user his/her preferences, they could be extracted elsewhere (social media). </li>
+                <li> <b>User information extraction</b>: instead of asking to the user his/her preferences, they could be extracted elsewhere (like a social media). </li>
                 <br>
                 <li> <b>Use of relevance feedback</b>: given the result, the user can help to get a better ranking (adding a "static" bias to PageRank vector).</li>
               </ul>
