--- a/public/404.html
+++ b/public/404.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
-<link rel="canonical" href="localhost/404.html" />
+<link rel="canonical" href="https://robertocorti.github.io/404.html" />
 
 
     <title>
@@ -25,16 +25,16 @@
 
 
 
-<link rel="stylesheet" href="/localhost/main.17863a81d979b637a02cd7632a4d86e9d80563ef460fd6af1a56962efcaa066b.css">
+<link rel="stylesheet" href="/main.17863a81d979b637a02cd7632a4d86e9d80563ef460fd6af1a56962efcaa066b.css">
 
 
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/localhost/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/localhost/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/localhost/favicon-16x16.png">
-    <link rel="manifest" href="/localhost/site.webmanifest">
-    <link rel="mask-icon" href="/localhost/safari-pinned-tab.svg" color="">
-    <link rel="shortcut icon" href="/localhost/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="">
+    <link rel="shortcut icon" href="/favicon.ico">
     <meta name="msapplication-TileColor" content="">
     <meta name="theme-color" content="">
 
@@ -43,7 +43,7 @@
 <meta itemprop="name" content="404 Page not found">
 <meta itemprop="description" content="My new homepage or blog">
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="localhost"/>
+<meta name="twitter:image" content="https://robertocorti.github.io/"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="My new homepage or blog"/>
@@ -54,8 +54,8 @@
     <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="My new homepage or blog" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="localhost/404.html" />
-<meta property="og:image" content="localhost"/>
+<meta property="og:url" content="https://robertocorti.github.io/404.html" />
+<meta property="og:image" content="https://robertocorti.github.io/"/>
 <meta property="og:site_name" content="Roberto Corti" />
 
 
@@ -99,7 +99,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="/localhost/about">About</a></li><li><a href="/localhost/blog">Blog</a></li><li><a href="/localhost/projects">Projects</a></li>
+    <ul class="menu__inner"><li><a href="/about">About</a></li><li><a href="/blog">Blog</a></li><li><a href="/projects">Projects</a></li>
     </ul>
 </nav>
 
@@ -130,9 +130,9 @@
             <h1>404</h1>
             <p>Oops, page not found…</p>
             <p class="btn-404">
-                <a href="localhost">
+                <a href="https://robertocorti.github.io/">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Home</a>
-                <a href="localhost/posts">
+                <a href="https://robertocorti.github.io/posts">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-archive"><polyline points="21 8 21 21 3 21 3 8"></polyline><rect x="1" y="3" width="22" height="5"></rect><line x1="10" y1="12" x2="14" y2="12"></line></svg>Archives</a>
             </p>
         </div>
@@ -146,9 +146,9 @@
     <div class="footer__inner">
         <div class="footer__content">
             <span>&copy; 2022</span>
-            <span><a href="localhost"></a></span>
+            <span><a href="https://robertocorti.github.io/"></a></span>
             <span><a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a></span>
-            <span><a href="localhost/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
+            <span><a href="https://robertocorti.github.io/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
             
         </div>
     </div>
@@ -169,7 +169,7 @@
 
 
 
-<script type="text/javascript" src="/localhost/bundle.min.ace63d93098bf623f7c286a9084a4c22bfc482944c734f87fe0b685c7c6c7fa0ad2edb028c3b4b60d3343720c8ab490b320ad7f8edf4f6e9a6b898fc529057a9.js" integrity="sha512-rOY9kwmL9iP3woapCEpMIr/EgpRMc0&#43;H/gtoXHxsf6CtLtsCjDtLYNM0NyDIq0kLMgrX&#43;O309ummuJj8UpBXqQ=="></script>
+<script type="text/javascript" src="/bundle.min.ace63d93098bf623f7c286a9084a4c22bfc482944c734f87fe0b685c7c6c7fa0ad2edb028c3b4b60d3343720c8ab490b320ad7f8edf4f6e9a6b898fc529057a9.js" integrity="sha512-rOY9kwmL9iP3woapCEpMIr/EgpRMc0&#43;H/gtoXHxsf6CtLtsCjDtLYNM0NyDIq0kLMgrX&#43;O309ummuJj8UpBXqQ=="></script>
 
 
 
