--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="https://robertocorti.github.io/about/index.html">About</a></li><li><a href="https://robertocorti.github.io/blog/index.html">Blog</a></li><li><a href="https://robertocorti.github.io/projects/index.html">Projects</a></li>
+    <ul class="menu__inner"><li><a href="/about">About</a></li><li><a href="/blog">Blog</a></li><li><a href="/projects">Projects</a></li>
     </ul>
 </nav>
 
