--- a/index.html
+++ b/index.html
@@ -860,13 +860,19 @@ Roberto Corti Web Page
         <div class="col-lg-4 col-md-6 pt-2">
             <div class="card h-100">
                 
+                <div class="card-header">
+                    <a href="/blogs/hello_world/">
+                        <img src="/images/hello_world.png" class="card-img-top" alt="Hello World!">
+                    </a>
+                </div>
+                
                 <div class="card-body bg-transparent p-3 shadow-sm">
                     <a href="/blogs/hello_world/" class="primary-font card-title">
                         <h5 class="card-title bg-transparent" title="Hello World!">Hello World!</h5>
                     </a>
                     <div class="card-text secondary-font">
-                        <p>Hello World! This is my first post in this page. I hope to fill this space with personal projects, blogposts, thoughts and many other things that I&rsquo;d like to share to you!
-See you soon!
+                        <p>Hello World! This is my first post on this page. I hope to fill this space with personal projects, blog posts, thoughts, and many other things I’d like to share with you!
+See you soon! :wink:
 Roberto</p>
                     </div>
                 </div>
