--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Text about my cool site" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://hugo-profile.netlify.app/404.html" />
+<meta property="og:url" content="https://robertocorti.github.io/404.html" />
 <meta property="og:site_name" content="Roberto Corti" />
 
 <meta name="twitter:card" content="summary"/>
@@ -340,7 +340,7 @@ Roberto</p>
     <div class="row justify-content-center">
         <div class="col-md-4 text-center">
             <div class="pb-2">
-                <a href="https://hugo-profile.netlify.app" title="Roberto Corti Web Page">
+                <a href="https://robertocorti.github.io" title="Roberto Corti Web Page">
                     <img alt="Footer logo" src="/logo_white.png"
                         height="40px" width="40px">
                 </a>
