updated home page

--- a/blogs/hello_world/index.html
+++ b/blogs/hello_world/index.html
@@ -112,7 +112,7 @@ Roberto"/>
 <script defer src="/fontawesome-5/all-5.15.4.js"></script>
 
   <title>
-Hello World! | Roberto Corti Web Page
+Hello World! | Roberto Corti
 
   </title>
 </head>
@@ -452,7 +452,7 @@ Roberto</p>
     <div class="row justify-content-center">
         <div class="col-md-4 text-center">
             <div class="pb-2">
-                <a href="https://robertocorti.github.io" title="Roberto Corti Web Page">
+                <a href="https://robertocorti.github.io" title="Roberto Corti">
                     <img alt="Footer logo" src="/logo_white.png"
                         height="40px" width="40px">
                 </a>
