--- a/404.html
+++ b/404.html
@@ -103,7 +103,7 @@
 <meta name="description" content=Text&#32;about&#32;my&#32;cool&#32;site>
 
   <title>
-Roberto Corti Web Page | 404 page not found
+Roberto Corti | 404 page not found
 
   </title>
 </head>
@@ -340,7 +340,7 @@ Roberto</p>
     <div class="row justify-content-center">
         <div class="col-md-4 text-center">
             <div class="pb-2">
-                <a href="https://robertocorti.github.io" title="Roberto Corti Web Page">
+                <a href="https://robertocorti.github.io" title="Roberto Corti">
                     <img alt="Footer logo" src="/logo_white.png"
                         height="40px" width="40px">
                 </a>
