updated home page and work section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
 
 
 
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	ga('create', 'G-MEASUREMENT_ID', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+
 <meta property="og:title" content="Roberto Corti" />
 <meta property="og:description" content="Text about my cool site" />
 <meta property="og:type" content="website" />
@@ -265,7 +278,7 @@ Roberto Corti
                     Personal Blog
                 </h3>
                 <p class="hero-content">
-                    Data scientist, math and programming enthusiast.
+                    Data Scientist. Math and Programming enthusiast.
                 </p>
                 <div class="row">
                     <div class="col-auto h-100">
@@ -720,7 +733,7 @@ Roberto Corti
                             </div>
 
                             <div class="pt-2">
-                                I worked as a data scientist and software developer at <a href="https://orobix.com">Orobix</a> in Bergamo, Italy for more than one year. I was mainly involved in the development of <a href="https://orobix.com/detectiv-ai/">Detectiv.ai</a>. I started as an intern working on R&amp;D activities related on anomaly detection in time series. After that, my job was to develop several features of this product and deploy to production. I am the &ldquo;father&rdquo; of <em>Similarity</em>, an algorithm inside Detectiv that collects and identifies similar anomalous patterns, proposing a solution to the problem based on past anomalous experiences (see use case <a href="https://orobix.com/en/our-case-histories/predictive-maintenance-food-beverage/">here</a>).
+                                I worked as a data scientist and software developer at <a href="https://orobix.com">Orobix</a> in Bergamo, Italy for more than one year. I was mainly involved in the development of <a href="https://orobix.com/detectiv-ai/">Detectiv.ai</a>. I started as an intern working on R&amp;D activities related on anomaly detection in time series. After that, my job was to develop several features of this product and deploy to production. My main contribution was <em>Similarity</em>, an algorithm inside Detectiv that I fully developed that collects and identifies similar anomalous patterns, proposing a solution to the problem based on past anomalous experiences (see use case <a href="https://orobix.com/en/our-case-histories/predictive-maintenance-food-beverage/">here</a>).
                             </div>
                         </div>
                         
