--- a/blogs/hello_world/index.html
+++ b/blogs/hello_world/index.html
@@ -28,6 +28,19 @@
 
 
 
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	ga('create', 'G-MEASUREMENT_ID', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+
 <meta property="og:title" content="Hello World!" />
 <meta property="og:description" content="Hello World! This is my first post on this page. I hope to fill this space with personal projects, blog posts, thoughts, and many other things I’d like to share with you!
 See you soon! :wink:
